Fixed alignment of select to other form elements

--- a/bin/materialize.css
+++ b/bin/materialize.css
@@ -6051,11 +6051,11 @@ label {
     transition: 0.2s ease-out; }
   .input-field label.active {
     font-size: 0.8rem;
-    -webkit-transform: translateY(-130%);
-    -moz-transform: translateY(-130%);
-    -ms-transform: translateY(-130%);
-    -o-transform: translateY(-130%);
-    transform: translateY(-130%); }
+    -webkit-transform: translateY(-140%);
+    -moz-transform: translateY(-140%);
+    -ms-transform: translateY(-140%);
+    -o-transform: translateY(-140%);
+    transform: translateY(-140%); }
   .input-field input[type=text]:focus + label, .input-field input[type=password]:focus + label, .input-field input[type=email]:focus + label, .input-field input[type=url]:focus + label, .input-field input[type=date]:focus + label, .input-field input[type=tel]:focus + label, .input-field input[type=number]:focus + label, .input-field input[type=search]:focus + label, .input-field textarea:focus.materialize-textarea + label {
     color: #26a69a; }
   .input-field input[type=text].valid, .input-field input[type=password].valid, .input-field input[type=email].valid, .input-field input[type=url].valid, .input-field input[type=date].valid, .input-field input[type=tel].valid, .input-field input[type=number].valid, .input-field input[type=search].valid, .input-field textarea.materialize-textarea.valid {
@@ -6431,8 +6431,12 @@ input[type=checkbox]:first-child ~ .lever:active:after, input[type=checkbox][dis
 /***************
   Select Field
 ***************/
+.select-label {
+  position: absolute; }
+
 .select-wrapper {
-  position: relative; }
+  position: relative;
+  margin-top: 15px; }
   .select-wrapper input.select-dropdown {
     position: relative;
     cursor: pointer;
